--- a/front/src/app/features/bet/list-betting/list-betting.component.html
+++ b/front/src/app/features/bet/list-betting/list-betting.component.html
@@ -1,17 +1,17 @@
 @if (betsSelected(); as betsSelected) {
   <div class="flex flex-col justify-between h-full">
-    <div class="flex flex-col m-2 container-bets overflow-auto shadow-inner-xl rounded-md bg-slate-200">
-      @for (bet of betsSelected; track bet) {
-        <app-bet-selected [betSelected]="bet"/>
-      } @empty {
-        <p class="font-bold text-base text-center my-2">Aucun pari</p>
-      }
-    </div>
     <div>
-      @if (totalCoins() > 0) {
-        <p class="flex justify-center mb-5 font-bold text-base text-gray-50">
+      <p class="flex justify-center mt-2 mb-2 font-bold text-base text-gray-50">
+        @if (totalCoins() > 0) {
           Gain potentiel: {{ totalCoins() }}
-        </p>
+        } @else {
+          Aucun pari
+        }
+      </p>
+    </div>
+    <div class="flex-1 flex flex-col m-2 container-bets overflow-auto shadow-inner-xl rounded-md bg-slate-200">
+      @for (bet of betsSelected; track bet.id) {
+        <app-bet-selected [betSelected]="bet"/>
       }
     </div>
   </div>
