--- a/front/src/app/features/race/race-start-timer/race-start-timer.component.html
+++ b/front/src/app/features/race/race-start-timer/race-start-timer.component.html
@@ -1,8 +1,8 @@
-@if (raceTimer() > 0) {
-  <div class="grow-0 flex mt-16 justify-center">
-    <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white">
+<div class="grow-0 flex mt-4 justify-center timer-container">
+  <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white">
+    @if (raceTimer() > 0) {
       <p class="">Les paris seront cloturés dans</p>
       <p class="mt-4 text-4xl font-bold text-center">{{ raceTimer() }}s</p>
-    </div>
+    }
   </div>
-}
+</div>
