improve defer example visibility

--- a/front/src/app/features/race/race-view/race-view.component.html
+++ b/front/src/app/features/race/race-view/race-view.component.html
@@ -15,7 +15,7 @@
         }
       }
     } @else {
-      <p>No race yet !</p>
+      <p class="text-center mt-6 text-xl text-white">No race yet !</p>
     }
   </div>
 </div>
