--- a/front/src/app/features/home/home.component.html
+++ b/front/src/app/features/home/home.component.html
@@ -1,6 +1,9 @@
-<div class="flex h-full">
-  <div class="col-control flex flex-col justify-between rounded-md bg-sky-900 mr-2">
-    <div class="grow grid grid-cols-3 container-bets overflow-auto rounded-md w-full">
+<div class="row-race col-span-12 rounded-md bg-sky-900 m-2">
+  <app-race-view />
+</div>
+<div class="row-main m-2 flex container-bets">
+  <div class="col-control flex flex-col justify-between rounded-md bg-sky-900 mr-2  overflow-auto">
+    <div class=" grow grid grid-cols-3 rounded-md w-full">
       @if (raceState() === RaceState.BetsOpened) {
         @for (bet of bets(); track bet) {
           <app-bet-card [betConfig]="bet"/>
@@ -11,12 +14,12 @@
     </div>
     <div class="flex">
       <button class="flex-1 m-2 h-12 pointer-events-auto rounded-md p-2
-    font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
+  font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
               (click)="startRace(2500000)">
         Nouvelle course
       </button>
       <button class="flex-1 m-2 h-12 pointer-events-auto rounded-md p-2
-    font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
+  font-semibold leading-5 text-white bet-button bg-red-600 hover:bg-red-500 "
               (click)="startRace(8000)">
         Course rapide
       </button>
