--- a/front/src/app/examples/signal/counter/counter.component.html
+++ b/front/src/app/examples/signal/counter/counter.component.html
@@ -14,7 +14,7 @@
       </button>
     </div>
   </div>
-  <div style="border: thick double #9CD9F0; width: 90%; padding: 10px; background-color: white" class="rounded-md">
+  <div class="border-solid border-blue-600 border-4 w-full rounded">
     <div class="flex justify-between">
       <div class="flex flex-col">
         <h1 class="font-semibold leading-5">Count: {{ count() }}</h1>
