--- a/presentation/css/custom.css
+++ b/presentation/css/custom.css
@@ -6,6 +6,13 @@ video {
   pointer-events: none;
 }
 
+.title {
+  font-family: system-ui;
+  background: var(--ng-gradient);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 /* Cover */
 
 /* whoami */
