adds missing required on input signals split race track component

--- a/front/src/app/features/race/race-track/race-track.component.html
+++ b/front/src/app/features/race/race-track/race-track.component.html
@@ -1,17 +1,15 @@
-@if (race(); as raceInfos) {
+@if (race(); as race) {
   <div class="flex mt-4">
     <ul class="flex-1 overflow-hidden track" #raceTrack>
-      @for (robot of raceInfos.robots; track robot.name) {
+      @for (robot of race.robots; track robot.name) {
         <li>
-          <a class="bot-point" [attr.data-face]="robot.state.pace"
-             [class.started]="raceInfos.state === RaceState.Started"
-             [ngStyle]="{'background-color': robot.color, 'margin-left': robot.state.distanceTraveled / 1000 * raceTrack.clientWidth  + 'px'}"></a>
+          <app-race-bot [robot]="robot" [trackLength]="raceTrack.clientWidth"/>
         </li>
       }
     </ul>
     <div class="finish-line"></div>
   </div>
-  @if (raceInfos.state === RaceState.BetsClosed) {
+  @if (race.state === RaceState.BetsClosed) {
     <div class="grow-0 flex mt-4 justify-center">
       <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white">
         <p>La course va bientôt débuter</p>
