--- a/presentation/css/custom.css
+++ b/presentation/css/custom.css
@@ -1,7 +1,7 @@
 :root {
   --ng-gradient: linear-gradient(90deg, rgba(133,20,245,1) 0%, rgba(253,29,29,1) 92%, rgba(250,44,5,1) 100%);
   --sub_title: #313178;
-  --list: #6a6af4;
+  --text: #6a6af4;
 }
 /* Global */
 video {
@@ -21,6 +21,13 @@ video {
   font-style: italic;
 }
 
+.text {
+  color: var(--text);
+  font-weight: bold;
+  font-style: italic;
+  padding-top: 1px;
+}
+
 .list ul {
   columns: 2;
   column-gap: 160px;
@@ -30,7 +37,7 @@ video {
 
 .list ul li {
   list-style: none;
-  color: var(--list);
+  color: var(--text);
   font-weight: bold;
   font-style: italic;
   padding-top: 1px;
