--- a/front/src/app/features/race/race-track/race-track.component.html
+++ b/front/src/app/features/race/race-track/race-track.component.html
@@ -11,9 +11,7 @@
   </div>
   @if (race.state === RaceState.BetsClosed) {
     <div class="grow-0 flex mt-4 justify-center">
-      <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white">
-        <p>La course va bientôt débuter</p>
-      </div>
+      <p class="text-white">La course va bientôt débuter</p>
     </div>
   }
 }
