--- a/front/src/app/layout/layout.component.html
+++ b/front/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="page-container h-full">
-  <div class="row-header m-2 p-2 rounded-md bg-sky-900">
+  <div [appContainer]="'sky'" class="row-header">
     <app-header></app-header>
   </div>
-  <router-outlet />
+  <router-outlet/>
 </div>
