--- a/front/src/app/features/bet/bet-card/bet-card.component.html
+++ b/front/src/app/features/bet/bet-card/bet-card.component.html
@@ -1,5 +1,5 @@
 @if (betConfig(); as betConfig) {
-  <div class="p-2 m-2 rounded-md shadow-inner-xl bg-slate-200">
+  <div [appContainer]="'light'" [margin]="false">
     <p class="mb-4 font-bold text-base">{{ betConfig.name }}</p>
     <div class="flex flex-col">
       @for (runner of betConfig.runners; track runner.id) {
