--- a/front/src/app/features/race/race-result/race-result.component.html
+++ b/front/src/app/features/race/race-result/race-result.component.html
@@ -1,5 +1,5 @@
 <div class="grow-0 flex mt-4 justify-center">
-  <div class="flex flex-col p-4 rounded-md bg-sky-900 text-white text-center">
+  <div class="flex flex-col p-4 text-white text-center">
     <p class="text-4xl">Résultats</p>
     <p class="firework"></p>
     <p class="firework red"></p>
