--- a/front/src/app/features/race/race-view-header/race-view-header.component.html
+++ b/front/src/app/features/race/race-view-header/race-view-header.component.html
@@ -1,5 +1,5 @@
 @if (race(); as raceInfos) {
-  <div [appContainer]="'light'" class="flex flex-row justify-around">
+  <div [appContainer]="'light'" [margin]="false" class="flex flex-row justify-around">
     <div class="grow">
       <span class="font-bold">Statut de la course :</span> {{ raceInfos.state }}
     </div>
