--- a/front/src/app/features/bet/list-betting/list-betting.component.html
+++ b/front/src/app/features/bet/list-betting/list-betting.component.html
@@ -1,6 +1,6 @@
 @if (betsSelected(); as betsSelected) {
-  <div class="flex flex-col justify-between h-full">
-    <p class="flex justify-center mt-2 mb-2 font-bold text-base text-gray-50">
+  <div class="flex flex-col justify-between h-full pb-2">
+    <p class="flex justify-center font-bold text-base text-gray-50">
       @if (totalCoins() > 0) {
         Gain potentiel: {{ totalCoins() }}
       } @else {
