--- a/front/src/app/features/home/home.component.html
+++ b/front/src/app/features/home/home.component.html
@@ -1,6 +1,4 @@
-<div [appContainer]="'sky'" class="row-race col-span-12">
-  <app-race-view/>
-</div>
+<app-race-view  [appContainer]="'sky'"  class="row-race" />
 <div class="row-main m-2 flex container-bets">
   <div [appContainer]="'sky'" [margin]="false"
        class="col-control flex flex-col justify-between overflow-auto mr-2">
