--- a/front/src/app/features/race/race-result/race-result.component.html
+++ b/front/src/app/features/race/race-result/race-result.component.html
@@ -4,6 +4,9 @@
     <p class="firework"></p>
     <p class="firework red"></p>
     <p class="firework green"></p>
+    <p class="firework purple"></p>
+    <p class="firework pink"></p>
+    <p class="firework orange"></p>
     <ul>
       @for (robot of courseResult(); track robot.name; let i = $index) {
         <li>{{i + 1}} - {{ robot.name }}</li>
