--- a/front/src/app/features/race/race-track/race-track.component.html
+++ b/front/src/app/features/race/race-track/race-track.component.html
@@ -3,6 +3,7 @@
     <ul class="flex-1 overflow-hidden track" #raceTrack>
       @for (robot of race.robots; track robot.name) {
         <li>
+          <span class="bot-name text-white">{{robot.name}}</span>
           <app-race-bot [robot]="robot" [trackLength]="raceTrack.clientWidth"/>
         </li>
       }
