--- a/front/src/app/features/race/race-result/race-result.component.scss
+++ b/front/src/app/features/race/race-result/race-result.component.scss
@@ -1,8 +1,8 @@
 @keyframes firework {
   0% {
-    transform: translate(-50%, 40vh);
-    width: 0.5vmin;
-    opacity: 1;
+    transform: translate(-50%, 36vh);
+    width: 0.6vmin;
+    opacity: 0;
   }
   40% {
     width: 0.5vmin;
@@ -10,37 +10,36 @@
   }
 
   100% {
-    width: 45vmin;
+    width: 60vmin;
     opacity: 0;
   }
 }
 
-.firework,
-.firework::before,
-.firework::after {
+@mixin firework($fireworkColor, $delay, $offset) {
+  z-index: 10;
   opacity: 0;
   content: "";
   position: absolute;
   top: 20%;
-  left: 50%;
+  left: $offset;
   transform: translate(-50%, -50%);
   width: 0.5vmin;
   aspect-ratio: 1;
-  background: radial-gradient(circle, #ff0 0.2vmin, #0000 0) 50% 00%,
-  radial-gradient(circle, #ff0 0.3vmin, #0000 0) 00% 50%,
-  radial-gradient(circle, #ff0 0.5vmin, #0000 0) 50% 99%,
-  radial-gradient(circle, #ff0 0.2vmin, #0000 0) 99% 50%,
-  radial-gradient(circle, #ff0 0.3vmin, #0000 0) 80% 90%,
-  radial-gradient(circle, #ff0 0.5vmin, #0000 0) 95% 90%,
-  radial-gradient(circle, #ff0 0.5vmin, #0000 0) 10% 60%,
-  radial-gradient(circle, #ff0 0.2vmin, #0000 0) 31% 80%,
-  radial-gradient(circle, #ff0 0.3vmin, #0000 0) 80% 10%,
-  radial-gradient(circle, #ff0 0.2vmin, #0000 0) 90% 23%,
-  radial-gradient(circle, #ff0 0.3vmin, #0000 0) 45% 20%,
-  radial-gradient(circle, #ff0 0.5vmin, #0000 0) 13% 24%;
+  background: radial-gradient(circle, $fireworkColor 0.2vmin, #0000 0) 50% 00%,
+  radial-gradient(circle, $fireworkColor 0.3vmin, #0000 0) 00% 50%,
+  radial-gradient(circle, $fireworkColor 0.5vmin, #0000 0) 50% 99%,
+  radial-gradient(circle, $fireworkColor 0.2vmin, #0000 0) 99% 50%,
+  radial-gradient(circle, $fireworkColor 0.3vmin, #0000 0) 80% 90%,
+  radial-gradient(circle, $fireworkColor 0.5vmin, #0000 0) 95% 90%,
+  radial-gradient(circle, $fireworkColor 0.5vmin, #0000 0) 10% 60%,
+  radial-gradient(circle, $fireworkColor 0.2vmin, #0000 0) 31% 80%,
+  radial-gradient(circle, $fireworkColor 0.3vmin, #0000 0) 80% 10%,
+  radial-gradient(circle, $fireworkColor 0.2vmin, #0000 0) 90% 23%,
+  radial-gradient(circle, $fireworkColor 0.3vmin, #0000 0) 45% 20%,
+  radial-gradient(circle, $fireworkColor 0.5vmin, #0000 0) 13% 24%;
   background-size: 0.5vmin 0.5vmin;
   background-repeat: no-repeat;
-  animation: firework 2s 2;
+  animation: firework 2s 3 $delay;
 }
 
 .firework::before {
@@ -51,44 +50,39 @@
   transform: translate(-50%, -50%) rotate(-37deg) !important;
 }
 
-.firework.red,
-.firework.red::before,
-.firework.red::after {
-  left: 45%;
-  background: radial-gradient(circle, #f00 0.2vmin, #0000 0) 50% 00%,
-  radial-gradient(circle, #f00 0.3vmin, #0000 0) 00% 50%,
-  radial-gradient(circle, #f00 0.5vmin, #0000 0) 50% 99%,
-  radial-gradient(circle, #f00 0.2vmin, #0000 0) 99% 50%,
-  radial-gradient(circle, #f00 0.3vmin, #0000 0) 80% 90%,
-  radial-gradient(circle, #f00 0.5vmin, #0000 0) 95% 90%,
-  radial-gradient(circle, #f00 0.5vmin, #0000 0) 10% 60%,
-  radial-gradient(circle, #f00 0.2vmin, #0000 0) 31% 80%,
-  radial-gradient(circle, #f00 0.3vmin, #0000 0) 80% 10%,
-  radial-gradient(circle, #f00 0.2vmin, #0000 0) 90% 23%,
-  radial-gradient(circle, #f00 0.3vmin, #0000 0) 45% 20%,
-  radial-gradient(circle, #f00 0.5vmin, #0000 0) 13% 24%;
-  background-size: 0.5vmin 0.5vmin;
-  background-repeat: no-repeat;
-  animation: firework 2s 2 0.2s;
+.firework,
+.firework::before,
+.firework::after {
+  @include firework(#f1c40f, 0s, 50%)
 }
 
 .firework.green,
 .firework.green::before,
 .firework.green::after {
-  left: 55%;
-  background: radial-gradient(circle, #0f0 0.2vmin, #0000 0) 50% 00%,
-  radial-gradient(circle, #0f0 0.3vmin, #0000 0) 00% 50%,
-  radial-gradient(circle, #0f0 0.5vmin, #0000 0) 50% 99%,
-  radial-gradient(circle, #0f0 0.2vmin, #0000 0) 99% 50%,
-  radial-gradient(circle, #0f0 0.3vmin, #0000 0) 80% 90%,
-  radial-gradient(circle, #0f0 0.5vmin, #0000 0) 95% 90%,
-  radial-gradient(circle, #0f0 0.5vmin, #0000 0) 10% 60%,
-  radial-gradient(circle, #0f0 0.2vmin, #0000 0) 31% 80%,
-  radial-gradient(circle, #0f0 0.3vmin, #0000 0) 80% 10%,
-  radial-gradient(circle, #0f0 0.2vmin, #0000 0) 90% 23%,
-  radial-gradient(circle, #0f0 0.3vmin, #0000 0) 45% 20%,
-  radial-gradient(circle, #0f0 0.5vmin, #0000 0) 13% 24%;
-  background-size: 0.5vmin 0.5vmin;
-  background-repeat: no-repeat;
-  animation: firework 2s 2 0.1s;
+  @include firework(#2ecc71, 0.3s, 60%)
+}
+
+.firework.red,
+.firework.red::before,
+.firework.red::after {
+  @include firework(#e74c3c, 0.4s, 40%)
+}
+
+.firework.purple,
+.firework.purple::before,
+.firework.purple::after {
+  @include firework(#9b59b6, 0.6s, 45%)
+}
+
+.firework.pink,
+.firework.pink::before,
+.firework.pink::after {
+  @include firework(#e84393, 0.8s, 55%)
+}
+
+
+.firework.orange,
+.firework.orange::before,
+.firework.orange::after {
+  @include firework(#e67e22, 1s, 50%)
 }
