improves race start

--- a/front/src/app/features/race/race-bot/race-bot.component.html
+++ b/front/src/app/features/race/race-bot/race-bot.component.html
@@ -1,6 +1,7 @@
 @if (robot(); as robot) {
   <a class="bot-point"
      [attr.data-face]="robot.state.pace"
+     [class.started]="raceStarted()"
      [ngStyle]="{'background-color': robot.color, 'margin-left': position()  + 'px'}"></a>
 }
 
